bsub cuda support

--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -24,3 +24,9 @@ install_missing_R_01:
     queue: " -gpu num=1:j_exclusive=yes:mode=exclusive_process -q gputest"
 
 
+NMF_report_chipseq:
+    walltime: 06:00
+    memory: 5120
+    queue: " -gpu num=1:j_exclusive=yes:mode=exclusive_process -q gputest"
+
+
