SE target genes rule

--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -14,6 +14,11 @@ __default__:
 #==============================================================================#
 #                         Consensus SE                                         #
 #==============================================================================#
+SE_target_genes:
+    cores    : 10
+    walltime : 01:30
+    memory   : 10240
+  
 tumors_consensus_SE_noH3K4me3:
     walltime: 01:30
     memory: 5120
