umap added to conda env

--- a/envs/R3.5.yaml
+++ b/envs/R3.5.yaml
@@ -28,6 +28,7 @@ dependencies:
  - bioconductor-homo.sapiens
  - bioconductor-edger
  - bioconductor-ggbio
+ - bioconductor-yapsa
  - python=3.6.7
  - numpy
  - pip
