IGV first commit

--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -42,3 +42,9 @@ NMF_report_rnaseq:
 
 
 #==============================================================================#
+#                              Compile Figures                                 #
+#==============================================================================#
+fig4i_IGV:
+    cores    : 2
+    walltime : 01:30
+    memory   : 10240
