--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -44,6 +44,11 @@ NMF_report_rnaseq:
 #==============================================================================#
 #                              Compile Figures                                 #
 #==============================================================================#
+fig1e_IGV:
+    cores    : 20
+    walltime : 01:30
+    memory   : 10240
+
 fig4i_IGV:
     cores    : 2
     walltime : 01:30
