--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -39,6 +39,13 @@ NMF_report_rnaseq:
 
 
 #    queue: " -gpu num=1:j_exclusive=yes:mode=exclusive_process -q gputest"
+#================================================================================#
+#                                       ARACNe                                   #
+#================================================================================#
+runAracneAP:
+    cores    : 10
+    walltime : 10:00
+    memory   : 46080
 
 
 #==============================================================================#
