Hockey stick plot

--- a/cluster/bsub.yaml
+++ b/cluster/bsub.yaml
@@ -51,6 +51,11 @@ runAracneAP:
 #==============================================================================#
 #                              Compile Figures                                 #
 #==============================================================================#
+fig1a_Hockey:
+    cores    : 30
+    walltime : 01:30
+    memory   : 10240
+
 fig1e_IGV:
     cores    : 20
     walltime : 01:30
